[package]
name = "oldqtt"
version = "0.1.0"
authors = ["Tobias Schmitt <hi@tobischmitt.net>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
rumqttc = { version = "0.24.0", features = ["url"] }
egui_extras = "0.30.0"
env_logger = "0.11"
pretty_env_logger = "0.5.0"
fastrand = "2.3.0"

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
